feat: Creating GameMinDtoController